# opme-agent

./: README.md  docker-compose.yaml
.deprecated/: docs.md
.experiment/datalake/bronze/sigtap/16112025/: opme_sigtap.json
.experiment/opme-features-ingestion/: .dockerignore  Dockerfile  Makefile  pyproject.toml
.experiment/opme-features-ingestion/src/: __main__.py
.experiment/opme-features-ingestion/src/core/config/: __init__.py  settings.py
.experiment/opme-features-ingestion/src/core/logging/: __init__.py  config.py  handlers.py  logger.py
agent/: Makefile
agent/api/: Dockerfile
agent/api/src/: __init__.py  __main__.py
agent/api/src/core/config/: __init__.py
agent/api/src/core/logging/: __init__.py  config.py
agent/api/src/infrastructure/repository/gpt/: __init__.py  openai.py
agent/chat/: Dockerfile
agent/chat/src/: __init__.py
agent/chat/src/core/config/: settings.py
api/: pyproject.toml
api/src/: mail.py
api/src/core/config/: settings.py
api/src/domain/chat/: __init__.py
api/src/routes/: factory.py
api/src/routes/hooks/: __init__.py  contracts.py
chat/: pyproject.toml
chat/src/core/logging/: config.py  handlers.py  logger.py
chat/src/pages/: ___init__.py
